fix for dark mode ssr 'flash'. (#13)

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -131,7 +131,8 @@
 }
 
 /* Dark Theme */
-[data-theme='dark'] {
+/* this data-reactroot attribute is ridiculous */
+[data-reactroot='dark'] {
   --color-foreground: hsl(0, 0%, 100%);
   --color-background: hsl(210deg, 30%, 8%);
   --color-links: hsl(213, 100%, 73%);
